Language: Fix language terms in course creation form

--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -544,7 +544,7 @@
     "Expired": "Venc\u00edu",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Nome del cursu",
     "Course code": "C\u00f3digu del cursu",
     "Create this course": "Criar cursu",
@@ -858,10 +858,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "En calcando Aceptar va crease'l sitiu web d'un cursu, que va tener distintes ferramientes: un xestor de documentos, un creador d'itinerarios d'aprendizase en formatu SCORM, un visualizador de lleiciones o itinerarios d'aprendizaxe; la posibilid\u00e1 de facer test y unviar trabayos, discutir nos foros y chat, unviar anuncies y recaos, disponer d'una axenda, videoconferencia y pizarra dixital, ferramientes pal trabayu en grupu, facer encuestes y siguimientu de los alumnos, etc. La so identificaci\u00f3n como creador d'esti sitiu va permitir que lu modifique seg\u00fan les sos necesidaes.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
