--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -619,7 +619,7 @@
     "Expired": "Ven\u00e7ut",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Nom del curs",
     "Only letters (a-z) and numbers (0-9)": "Nom\u00e9s lletres (a-z) i n\u00fameros (0-9)",
     "Course code": "Codi del curs",
@@ -969,10 +969,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Un cop hagueu clicat Acceptar es crear\u00e0 el lloc web d'un curs. el qual constar\u00e0 de diverses eines: un gestor de documents, un creador d'itineraris formatius en format SCORM, un visualitzador de lli\u00e7ons o itineraris formatius, la possibilitat de realitzar ex\u00e0mens i lliurar treballs, discutir en f\u00f2rums i a trav\u00e9s de xat, enviar anuncis i missatges, disposar d'una agenda, videoconfer\u00e8ncia i pissarra digital, eines per al treball en grup, realitzar enquestes i seguiment dels alumnes, etc. La vostra identificaci\u00f3 com a creador d'aquest lloc us permetr\u00e0 modificar-lo segons les vostres necessitats.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
