--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -415,7 +415,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "K\u00f3d kurzu",
     "Create this course": "Vytvo\u0159it tento kurz",
     "Complete": "Kompletn\u00ed",
@@ -690,10 +690,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Jedn\u00edm kliknut\u00edm na OK vytvo\u0159\u00edte webstr\u00e1nku s F\u00f3rem, Agendou, Spr\u00e1vou dokument\u016f atd. Va\u0161e p\u0159ihl\u00e1\u0161en\u00ed, jako tvorce webstr\u00e1nky V\u00e1m umo\u017en\u00ed zm\u011bnit ji dle Va\u0161\u00ed pot\u0159eby.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
