--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -67,7 +67,7 @@
     "Updated at": "Aktualsiert von",
     "File": "Datei",
     "From": "Von",
-    "To": "An",
+    "To": "Bis",
     "Cc": "Cc",
     "User": "Benutzer",
     "Sent date": "Datum senden",
@@ -424,7 +424,7 @@
     "Add friends": "Freund hinzuf\u00fcgen",
     "Add friend": "Freunde hinzuf\u00fcgen",
     "Refresh": "aktualisieren",
-    "Are you sure to delete the friendship?": "Are you sure to delete the friendship?",
+    "Are you sure to delete the friendship?": "M\u00f6chten Sie die Freundschaft wirklich l\u00f6schen?",
     "Friends": "Freunde",
     "Go to friends list": "Go to friends list",
     "Please enter a search query": "Please enter a search query",
@@ -659,7 +659,7 @@
     "Expired": "Abgelaufen",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Kursbezeichnung",
     "Only letters (a-z) and numbers (0-9)": "Nur Buchstaben (a-z) und Zahlen (0-9)",
     "Course code": "K\u00fcrzel",
@@ -1024,10 +1024,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Wenn Sie OK geklickt haben, wird ein kompletter Kurs mit Forum, Agenda, Dokument-Manager usw. erstellt. Ihr Login, als Autor des Kurses, erlaubt Ihnen, die Seite f\u00fcr den Kurs entsprechend Ihrer W\u00fcnsche und Erfordernisse   zu bearbeiten",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
