--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -659,7 +659,7 @@
     "Expired": "Vencido",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Nombre del curso",
     "Only letters (a-z) and numbers (0-9)": "Solo letras (a-z) y n\u00fameros (0-9)",
     "Course code": "C\u00f3digo del curso",
@@ -1024,10 +1024,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Una vez que haya pulsado el bot\u00f3n \"Crear curso\" se crear\u00e1 el sitio web del curso, en el que dispondr\u00e1 de m\u00faltiples herramientas que podr\u00e1 configurar para dar al curso su aspecto definitivo: Test o Ejercicios, Proyectos o Blogs, Wikis, Tareas, Creador y visualizador de Lecciones en formato SCORM, Encuestas y mucho m\u00e1s. Su identificaci\u00f3n como creador de este sitio autom\u00e1ticamente lo convierte en profesor del curso, lo cual le permitir\u00e1 modificarlo seg\u00fan sus necesidades.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
