--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -593,7 +593,7 @@
     "Expired": "Iraungita",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Ikastaroaren izena",
     "Only letters (a-z) and numbers (0-9)": "Letrak (a-z) eta zenbakiak (0-9) bakarrik",
     "Course code": "Ikastaroaren kodea",
@@ -932,10 +932,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Behin eta \"Sortu ikastaro bat\" botoia klikatu ondoren, ikastaroaren gunea sortuko da eta, bertan, ikastaroari behin betiko itxura emateko tresna ugari izango dituzu eskura hainbat ataletan: Azterketak edo Ariketak, Ikaskuntza Proiketuak edo Blogak, Wikiak, Lanak, SCORM formatuko ikasgaien sortzaile eta bistaratzailea, Inkestak, Dropbox, Agenda eta abar. Gunearen sortzaile gisa agertzeak ikastaroko irakasle bihurtuko zaitu eta beharren arabera editatzeko pribilegioak izango dituzu.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
