--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -142,8 +142,8 @@
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
     "Permission to use the microphone is not enabled, please enable it in your browser to record audio": "Permission to use the microphone is not enabled, please enable it in your browser to record audio",
-    "Hide advanced settings": "Hide advanced settings",
-    "Show advanced settings": "Show advanced settings",
+    "Hide advanced settings": "Cache les param\u00e8tres avanc\u00e9s",
+    "Show advanced settings": "Afficher les param\u00e8tres avanc\u00e9s",
     "Yes": "Oui",
     "No": "Non",
     "Confirm": "Confirmer",
@@ -424,7 +424,7 @@
     "Add friends": "Ajouter des amis",
     "Add friend": "Ajouter un ami",
     "Refresh": "Rafra\u00eechir",
-    "Are you sure to delete the friendship?": "Are you sure to delete the friendship?",
+    "Are you sure to delete the friendship?": "\u00cates vous s\u00fbr de supprimer la relation ?",
     "Friends": "Amis",
     "Go to friends list": "Go to friends list",
     "Please enter a search query": "Please enter a search query",
@@ -659,7 +659,7 @@
     "Expired": "Expir\u00e9",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "\u00c9crivez un titre court et percutant pour votre cours, par exemple: Gestion de l'innovation",
     "Course name": "Nom du cours",
     "Only letters (a-z) and numbers (0-9)": "Seulement lettres (a-z) et chiffres (0-9)",
     "Course code": "Code cours",
@@ -1024,10 +1024,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Une fois que vous aurez cliqu\u00e9 sur OK, un cours contenant Tests, Documents, Parcours d'Apprentissage SCORM... sera cr\u00e9\u00e9. Gr\u00e2ce \u00e0 votre identifiant de responsable du cours vous pourrez en modifier le contenu",
     "Course ID is missing": "Course ID is missing",
-    "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "Course created successfully": "Cours cr\u00e9\u00e9",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
