--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -643,7 +643,7 @@
     "Expired": "\u05e4\u05d2 \u05ea\u05d5\u05e7\u05e3",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "\u05e9\u05dd \u05d4\u05e7\u05d5\u05e8\u05e1",
     "Only letters (a-z) and numbers (0-9)": "\u05e8\u05e7 \u05d0\u05d5\u05ea\u05d9\u05d5\u05ea (\u05d0-\u05d6) \u05d5\u05de\u05e1\u05e4\u05e8\u05d9\u05dd (0-9)",
     "Course code": "\u05de\u05d6\u05d4\u05d4 \u05e7\u05d5\u05e8\u05e1",
@@ -1005,10 +1005,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u05d1\u05e8\u05d2\u05e2 \u05e9\u05d0\u05ea\u05d4 \u05dc\u05d5\u05d7\u05e5 \u05e2\u05dc \"\u05e6\u05d5\u05e8 \u05e7\u05d5\u05e8\u05e1\", \u05e0\u05d5\u05e6\u05e8 \u05e7\u05d5\u05e8\u05e1 \u05e2\u05dd \u05e7\u05d8\u05e2 \u05dc\u05de\u05d1\u05d7\u05e0\u05d9\u05dd, \u05dc\u05de\u05d9\u05d3\u05d4 \u05de\u05d1\u05d5\u05e1\u05e1\u05ea \u05e4\u05e8\u05d5\u05d9\u05e7\u05d8\u05d9\u05dd, \u05d4\u05e2\u05e8\u05db\u05d5\u05ea, \u05e7\u05d5\u05e8\u05e1\u05d9\u05dd, \u05d3\u05e8\u05d5\u05e4\u05d1\u05d5\u05e7\u05e1, \u05d0\u05d2'\u05e0\u05d3\u05d4 \u05d5\u05e2\u05d5\u05d3 \u05d4\u05e8\u05d1\u05d4 \u05d9\u05d5\u05ea\u05e8. \u05db\u05e0\u05d9\u05e1\u05d4 \u05db\u05de\u05d5\u05e8\u05d4 \u05de\u05e1\u05e4\u05e7\u05ea \u05dc\u05da \u05d4\u05e8\u05e9\u05d0\u05d5\u05ea \u05e2\u05e8\u05d9\u05db\u05d4 \u05dc\u05e7\u05d5\u05e8\u05e1 \u05d6\u05d4.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
