--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -521,7 +521,7 @@
     "Expired": "Lej\u00e1rt",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Kurzus neve",
     "Course code": "Kurzus k\u00f3d",
     "Create this course": "Kurzus ter\u00fclet l\u00e9trehoz\u00e1sa",
@@ -817,10 +817,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Amint az OK-re kattint, l\u00e9trej\u00f6n az \u00faj kurzus honlapja f\u00f3rummal, napt\u00e1rral, dokumentum szerkeszt\u0151vel \u00e9s az egy\u00e9b eszk\u00f6z\u00f6kkel. A kurzus l\u00e9trehoz\u00f3jak\u00e9nt vagy adminisztr\u00e1torak\u00e9nt k\u00e9s\u0151bb ig\u00e9nyei szerint testreszabhatja a kurzust.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
