--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -424,7 +424,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "\uacfc\uc815 \ucf54\ub4dc",
     "Complete": "\uc644\ub8cc",
     "Incomplete": "\ubbf8\uc644\ub8cc",
@@ -690,10 +690,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "OK\ub97c \ud074\ub9ad\ud558\uba74, \ud3ec\ub7fc, \uc77c\uc815, \ubb38\uc11c \uad00\ub9ac\uc790 \ub4f1\uc744 \uac00\uc9c4 \uc6f9\uc0ac\uc774\ud2b8\ub97c \uc0dd\uc131\ud558\uac8c \ub429\ub2c8\ub2e4. \uc6f9\uc0ac\uc774\ud2b8\uc758 \uc0dd\uc131\uc790\ub85c \ub85c\uadf8\uc778\ud558\uba74, \uc790\uc2e0\uc758 \ud544\uc694\uc5d0 \ub530\ub77c \ubcc0\uacbd\uc774 \uac00\ub2a5\ud569\ub2c8\ub2e4.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
