--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -602,7 +602,7 @@
     "Expired": "Expirado",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Nome do curso",
     "Only letters (a-z) and numbers (0-9)": "Somente letras (a-z) e n\u00fameros (0-9)",
     "Course code": "C\u00f3digo do curso",
@@ -948,10 +948,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Ap\u00f3s clicar em \"Criar um curso\", ser\u00e1 criado um curso com uma sec\u00e7\u00e3o de testes/exerc\u00edcios, projecto percurso de aprendizagem, avalia\u00e7\u00f5es, cursos, caixa de entregas, Agenda e muito mais. Ao registar-se como instrutor ser-lhe-\u00e3o atribu\u00eddos privil\u00e9gios para poder editar esse curso.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
