--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -536,7 +536,7 @@
     "Expired": "Vencido",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Yachachinaq sutin",
     "Course code": "Yachachinaq chinpun",
     "Create this course": "Kamay yachachinaq k'itinta",
@@ -834,10 +834,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Chaskiy nisqa q'apiqtiykiqa ruwachikunqa yachachinapa web  k'itin, kay imaymana llank'anakunayuq: qelqa khipukuna kamachiq, yachanakuna formato SCORM nisqapi kamachiq, yachanakuna qhawachiq; tapukuy ruwachinapaq hinallataq llank'ay apachinapaq, K'itirimanapi chat nispapipas rimarinakunapaq, willanata ima willayta apachinapaqpas, kanqapas ruwana, videonispapi rimarinakuy hinallataq qelqanapaq pizarra digital nisqa,hu\u00f1usqa llank'anapaq, ima tapukuykuna ruwanapaq yachaqekunata qatipanapaqpas, hoqkunatawan.Kay k'iti kamachispaq atipanki t'ijrapayta ima munasqaykiman.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
