--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -606,7 +606,7 @@
     "Expired": "Expirat",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Numele cursului",
     "Only letters (a-z) and numbers (0-9)": "Doar litere (a-z) si numere (0-9)",
     "Course code": "Cod",
@@ -952,10 +952,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "De indata ce ati apasat pe butonul \"Creaza cursul\" se va crea situl web a cursului, in care va dispune de mai multiple instrumente care pot configura pentru a da cursului un aspect definit: Test sau Exercitii, Proiecte sau Blogs, Wikis, Teme, Creator si vizualizator de Lectii in formatul SCORM, Sondaje si mai multe. Identificarea ca creatorul acestui site va face automat profesor al cursului, care va permite modificarea sa potrivit nevoilor dumneavoastr\u0103.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
