--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -502,7 +502,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Kursnamn",
     "Course code": "Kurskod",
     "Create this course": "Skapa den h\u00e4r kursen",
@@ -795,10 +795,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "N\u00e4r du klickar p\u00e5 OK, kommer en sajt att skapas med Forum, Agenda, Dokumenthanterare m.m. Ditt login, som skapare av sajten, ger dig m\u00f6jlighet att modifiera den efter dina behov.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
