--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -482,7 +482,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "Ders kodu",
     "Create this course": "Bu e\u011fitimi olu\u015ftur",
     "Complete": "Tamam",
@@ -771,10 +771,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "OK t\u0131klad\u0131\u011f\u0131n\u0131zda, Forum, G\u00fcndem, Belge Y\u00f6netimi vs. ara\u00e7larla birlikte bu dersin sitesi yarat\u0131l\u0131r. Kullan\u0131c\u0131 ad\u0131n\u0131z ve \u015fifrenizle giri\u015f yaparak siteyi iste\u011finiz \u015fekilde d\u00fczenleyebilirsiniz.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
