--- a/assets/locales/vi_VN.json
+++ b/assets/locales/vi_VN.json
@@ -365,7 +365,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "M\u00e3 kho\u00e1 h\u1ecdc",
     "Mail: \\'From\\' address": "Mail: \\'From\\' address",
     "Mail: \\'From\\' name": "Mail: \\'From\\' name",
@@ -620,10 +620,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Sau khi b\u1ea5m OK, m\u1ed9t website s\u1ebd \u0111\u01b0\u1ee3c t\u1ea1o ra v\u1edbi \u0111\u1ea7y \u0111\u1ee7 c\u00e1c chuy\u00ean m\u1ee5c. B\u1ea1n ch\u1ec9 c\u1ea7n \u0111\u0103ng nh\u1eadp v\u00e0 hi\u1ec7u ch\u1ec9nh theo \u00fd mu\u00f4n.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
