--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -504,7 +504,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "\u8bfe\u7a0b\u540d\u79f0",
     "Course code": "\u4ee3\u7801",
     "Create this course": "\u521b\u5efa\u8fd9\u4e2a\u8bfe\u7a0b",
@@ -799,10 +799,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u70b9\u51fb\u786e\u5b9a\u540e\uff0c\u5c06\u521b\u5efa\u60a8\u7684\u8bfe\u7a0b\uff0c\u8be5\u8bfe\u7a0b\u5177\u6709\u8bfe\u7a0b\u8bba\u575b\u3001\u6559\u5b66\u8ba1\u5212\u3001\u8bb2\u4e49\u6750\u6599\u7ba1\u7406\u7b49\uff1b\u767b\u5f55\u540e\u60a8\u53ef\u4ee5\u6309\u7167\u9700\u8981\u6dfb\u52a0\u8bfe\u7a0b\u5185\u5bb9\u3002",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
