--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -481,7 +481,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "\u4ee3\u78bc",
     "Complete": "\u5b8c\u6574",
     "Incomplete": "\u672a\u5b8c\u6210",
@@ -764,10 +764,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u9ede\u64ca\u78ba\u5b9a\u5f8c\uff0c\u5c07\u5275\u5efa\u60a8\u7684\u8ab2\u7a0b\uff0c\u8a72\u8ab2\u7a0b\u5177\u6709\u8ab2\u7a0b\u8ad6\u58c7\u3001\u6559\u5b78\u8a08\u756b\u3001\u8b1b\u7fa9\u6750\u6599\u7ba1\u7406\u7b49\uff1b\u767b\u9304\u5f8c\u60a8\u53ef\u4ee5\u6309\u7167\u9700\u8981\u6dfb\u52a0\u8ab2\u7a0b\u5167\u5bb9\u3002",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
