--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -649,7 +649,7 @@
     "Expired": "\u0645\u0646\u062a\u0647\u064a \u0627\u0644\u0635\u0644\u0627\u062d\u064a\u0629",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "\u0627\u0633\u0645 \u0627\u0644\u0645\u0642\u0631\u0631",
     "Only letters (a-z) and numbers (0-9)": "(a-z) (0-9) \u064a\u0633\u0645\u062d \u0628\u0627\u0644\u0627\u062d\u0631\u0641 \u0648\u0627\u0644\u0627\u0631\u0642\u0627\u0645 \u0641\u0642\u0637",
     "Course code": "\u0631\u0645\u0632 \u0627\u0644\u0645\u0642\u0631\u0631",
@@ -1013,10 +1013,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u0628\u0645\u062c\u0631\u062f \u0646\u0641\u0631\u0643 \u0639\u0644\u0649 \u0632\u0631 \"\u0627\u0646\u0634\u0627\u0621 \u0645\u0642\u0631\u0631\"\u060c \u0641\u0627\u0646\u0647 \u0633\u0648\u0641 \u064a\u062a\u0645 \u0627\u0646\u0634\u0627\u0621 \u0645\u0642\u0631\u0631 \u0645\u0639 \u0642\u0633\u0645 \u0644\u0644\u0627\u062e\u062a\u0628\u0627\u0631\u0627\u062a \u0648\u0627\u0644\u0648\u0627\u062c\u0628\u0627\u062a \u0648\u0627\u0644\u0645\u0642\u0631\u0631\u0627\u062a \u0648\u0645\u0634\u0627\u0631\u0643\u0629 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0648\u0627\u0644\u062a\u0642\u0648\u064a\u0645 \u0648\u0627\u0644\u0645\u0632\u064a\u062f\u060c \u0627\u0646 \u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644 \u0643\u0645\u062f\u0631\u0633 \u0633\u0648\u0641 \u064a\u0645\u0646\u062d\u0643 \u0635\u0644\u0627\u062d\u064a\u0627\u062a \u0627\u0644\u062a\u062d\u0631\u064a\u0631 \u0641\u064a \u0627\u0644\u0645\u0642\u0631\u0631",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
