--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -555,7 +555,7 @@
     "Expired": "\u0418\u0437\u0442\u0435\u043a\u044a\u043b \u0441\u0440\u043e\u043a",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "\u0418\u043c\u0435 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430",
     "Course code": "\u041a\u043e\u0434 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430",
     "Fill with demo content": "\u0414\u0430 \u0441\u0435 \u0434\u043e\u0431\u0430\u0432\u0438 \u043f\u0440\u0438\u043c\u0435\u0440\u043d\u043e \u0441\u044a\u0434\u044a\u0440\u0436\u0430\u043d\u0438\u0435",
@@ -867,10 +867,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u0421\u043b\u0435\u0434 \u043a\u0430\u0442\u043e \u0449\u0440\u0430\u043a\u043d\u0435\u0442\u0435 \u0431\u0443\u0442\u043e\u043d\u0430 \"OK\" \u0449\u0435 \u0441\u0435 \u0441\u044a\u0437\u0434\u0430\u0434\u0435 \u0441\u0430\u0439\u0442 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430. \u0428\u0435 \u043c\u043e\u0436\u0435\u0442\u0435 \u0434\u0430 \u043f\u0440\u043e\u043c\u0435\u043d\u044f\u0442\u0435 \u043a\u0443\u0440\u0441\u0430 \u043a\u0430\u043a\u0442\u043e \u043f\u043e\u0436\u0435\u043b\u0430\u0435\u0442\u0435, \u0437\u0430\u0449\u043e\u0442\u043e \u0441\u0442\u0435 \u043d\u0435\u0433\u043e\u0432 \u0441\u044a\u0437\u0434\u0430\u0442\u0435\u043b.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
