--- a/assets/locales/gl.json
+++ b/assets/locales/gl.json
@@ -659,7 +659,7 @@
     "Expired": "Expired",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Course name",
     "Only letters (a-z) and numbers (0-9)": "Only letters (a-z) and numbers (0-9)",
     "Course code": "Course code",
@@ -1024,10 +1024,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
