--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -428,7 +428,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Only letters (a-z) and numbers (0-9)": "\u82f1\u5b57 (a-z) \u3068\u6570\u5b57 (0-9) \u306e\u307f\u3067\u3059",
     "Course code": "\u30b3\u30fc\u30b9 \u30b3\u30fc\u30c9",
     "Code": "\u30b3\u30fc\u30b9 \u30b3\u30fc\u30c9",
@@ -708,10 +708,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u529e\u6400OK\u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u3001\u67f4\u7684\u6280\u3084\u5f92\u5e74\u3001\u77e2\u4eca\u30de\u30cd\u3016\u30b8\u30e3\u3016\u70e7\u306e\u30b5\u30a4\u30c8\u304c\u53eb\u4e38\u307e\u3059\u3002\u30b5\u30a4\u30c8\u4faf\u5587\u835a\u3068\u3057\u3066\u30ed\u30b0\u30a4\u30f3\u3059\u308b\u3068\u3001\u30b5\u30a4\u30c8\u3092\u996f\u8d56\u3059\u308b\u3053\u3068\u304c\u53eb\u4e38\u307e\u3059\u3002",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
