--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -585,7 +585,7 @@
     "Expired": "Izbeidzies",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "Kursa nosaukums",
     "Only letters (a-z) and numbers (0-9)": "Tikai burti (a-z)un cipari (0-9)",
     "Course code": "Kursa kods",
@@ -913,10 +913,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Tikl\u012bdz nospied\u012bsiet OK, tiks izveidota kursa m\u0101jas lapa ar Forumu, Pl\u0101not\u0101ju, Dokumentu r\u012bku, u.t.t. Piesakoties sist\u0113m\u0101 ar savu lietot\u0101jv\u0101rdu un paroli, J\u016bs var\u0113siet veidot un labot \u0161o kursa m\u0101jas lapu.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
