--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -479,7 +479,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "\u0428\u0438\u0444\u0440\u0430 \u043d\u0430 \u043a\u0443\u0440\u0441\u043e\u0442",
     "Complete": "\u041a\u043e\u043c\u043f\u043b\u0435\u0442\u043d\u043e",
     "Incomplete": "\u041d\u0435\u043f\u043e\u0442\u043f\u043e\u043b\u043d\u043e",
@@ -763,10 +763,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u0410\u043a\u043e \u0435\u0434\u043d\u0430\u0448 \u043a\u043b\u0438\u043a\u043d\u0435\u0442\u0435 \u043d\u0430 \u0414\u043e\u0431\u0440\u043e, \u0441\u0430\u0458\u0442\u043e\u0442 \u0441\u043e \u0424\u043e\u0440\u0443\u043c, \u0420\u0430\u0441\u043f\u043e\u0440\u0435\u0434, \u0423\u043f\u0440\u0430\u0432\u0443\u0432\u0430\u0447_\u0441\u043e \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0438 \u0438\u0442\u043d \u045c\u0435 \u0431\u0438\u0434\u0435 \u043a\u0440\u0435\u0438\u0440\u0430\u043d. \u0412\u0430\u0448\u0435\u0442\u043e \u043d\u0430\u0458\u0430\u0432\u0443\u0432\u0430\u045a\u0435 \u043a\u0430\u043a\u043e \u043a\u0440\u0435\u0430\u0442\u043e\u0440 \u043d\u0430 \u0441\u0430\u0458\u0442\u043e\u0442 \u0412\u0438 \u0434\u043e\u043f\u0443\u0448\u0442\u0430 \u0434\u0430 \u043f\u0440\u0430\u0432\u0438\u0442\u0435 \u0438\u0437\u043c\u0435\u043d\u0438 \u043d\u0438\u0437 \u043d\u0435\u0433\u043e, \u0441\u043e\u0433\u043b\u0430\u0441\u043d\u043e \u0441\u043e \u0432\u0430\u0448\u0438\u0442\u0435 \u043f\u043e\u0442\u0440\u0435\u0431\u0438.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
