--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -618,7 +618,7 @@
     "Expired": "Vypr\u0161an\u00fd",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course name": "N\u00e1zov kurzu",
     "Only letters (a-z) and numbers (0-9)": "Iba p\u00edsmen\u00e1 (a-z) a \u010d\u00edslice (0-9)",
     "Course code": "K\u00f3d kurzu",
@@ -968,10 +968,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Kliknut\u00edm na OK sa vytvor\u00ed str\u00e1nka z agendou, f\u00f3rom, mene\u017e\u00e9rom dokumentov at\u010f. Prihl\u00e1senie va\u0161\u00edm menom, ako tvorcom Vam umo\u017en\u00ed ju meni\u0165 pod\u013ea potreby.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
