--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -462,7 +462,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "\u0160ifra kursa",
     "Create this course": "Kreiraj kurs",
     "Complete": "Zavr\u0161eno",
@@ -744,10 +744,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "Kada kliknete na OK, Forum, Agenda, Organizator dokumenata i td. \u0107e biti kreiran. Kao osoba koja je kreirala sajt imate mogu\u0107nost da to modifikujete prema va\u0161im potrebama.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
