--- a/assets/locales/uk_UA.json
+++ b/assets/locales/uk_UA.json
@@ -397,7 +397,7 @@
     "Ends today": "Ends today",
     "Introduction updated successfully!": "Introduction updated successfully!",
     "Introduction created successfully!": "Introduction created successfully!",
-    "Write a short and striking course name, For example: Innovation Management": "Write a short and striking course name, For example: Innovation Management",
+    "Write a short and striking course name, for example: Innovation Management": "Write a short and striking course name, for example: Innovation Management",
     "Course code": "\u041a\u043e\u0434 \u043a\u0443\u0440\u0441\u0443",
     "Code": "\u041a\u043e\u0434 \u043a\u0443\u0440\u0441\u0443",
     "Add a new folder": "\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0443 \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0456\u044e",
@@ -674,10 +674,10 @@
     "The exercises auto-launch feature configuration is enabled": "The exercises auto-launch feature configuration is enabled",
     "The learning path auto-launch setting is ON": "The learning path auto-launch setting is ON",
     "The forum's auto-launch setting is on": "The forum's auto-launch setting is on",
-    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more": "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more",
+    "Once you click on \"Create a course\", a course is created with a section for Tests, Project based learning, Assessments, Courses, Dropbox, Agenda and much more. Logging in as teacher provides you with editing privileges for this course.": "\u042f\u043a \u0442\u0456\u043b\u044c\u043a\u0438 \u0432\u0438 \u043d\u0430\u0442\u0438\u0441\u043d\u0435\u0442\u0435 \u041e\u041a, \u0441\u0430\u0439\u0442 \u0437 \u0424\u043e\u0440\u0443\u043c\u043e\u043c, \u041f\u043b\u0430\u043d\u043e\u043c \u0442\u0430 \u043c\u0435\u043d\u0435\u0434\u0436\u0435\u0440\u043e\u043c \u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0456\u0432 \u0431\u0443\u0434\u0435 \u0441\u0442\u0432\u043e\u0440\u0435\u043d\u043e. \u0412\u0438 \u0431\u0443\u0434\u0435\u0442\u0435 \u043c\u0430\u0442\u0438 \u043c\u043e\u0436\u043b\u0438\u0432\u0456\u0441\u0442\u044c \u0437\u043c\u0456\u043d\u044e\u0432\u0430\u0442\u0438 \u0439\u043e\u0433\u043e \u043a\u043e\u043d\u0442\u0435\u043d\u0442, \u043a\u043e\u043b\u0438 \u0437\u0430\u0432\u0433\u043e\u0434\u043d\u043e.",
     "Course ID is missing": "Course ID is missing",
     "Course created successfully": "Course created successfully",
-    "An unexpected error occurred": "An unexpected error occurred",
+    "An unexpected error occurred.": "An unexpected error occurred.",
     "Error deleting document(s)": "Error deleting document(s)",
     "Template successfully deteled": "Template successfully deteled",
     "Error deleting the template": "Error deleting the template",
