--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -29483,8 +29483,8 @@ msgstr "Certificate set as default successfully"
 msgid "Error setting certificate as default"
 msgstr "Error setting certificate as default"
 
-msgid "Template successfully deteled."
-msgstr "Template successfully deteled."
+msgid "Template successfully deleted."
+msgstr "Template successfully deleted."
 
 msgid "Error deleting the template."
 msgstr "Error deleting the template."
@@ -30691,3 +30691,12 @@ msgstr "Branding (logos)"
 
 msgid "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
 msgstr "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
+
+msgid "Write a short and striking course name, for example: Innovation Management"
+msgstr "Write a short and striking course name, for example: Innovation Management"
+
+msgid "Show advanced settings"
+msgstr "Show advanced settings"
+
+msgid "Hide advanced settings"
+msgstr "Hide advanced settings"
