--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -29451,7 +29451,7 @@ msgstr ""
 msgid "Error setting certificate as default"
 msgstr ""
 
-msgid "Template successfully deteled."
+msgid "Template successfully deleted."
 msgstr ""
 
 msgid "Error deleting the template."
@@ -30655,4 +30655,13 @@ msgid "Branding (logos)"
 msgstr ""
 
 msgid "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
+msgstr ""
+
+msgid "Write a short and striking course name, for example: Innovation Management"
+msgstr ""
+
+msgid "Show advanced settings"
+msgstr ""
+
+msgid "Hide advanced settings"
 msgstr ""
